# api-gateway-with-abuse-detection

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/core/: database.py  exceptions.py  logging.py  metrics.py  redis_client.py  security.py
app/middleware/: abuse_detector.py  auth.py  bloom_filter.py  rate_limit.py  request_id.py  shadow_mode.py
app/models/: user.py
app/routers/: admin.py  auth.py  gateway.py
app/schemas/: auth.py
app/services/: abuse_detector.py  bloom_filter.py  graduated_response.py  rate_limiter.py  shadow_logger.py
app/workers/: bloom_sync.py
migrations/: env.py
migrations/versions/: 1130f7259f8a_merge_heads.py  4d6b8b0f3f62_create_users_table.py  b5a5ab731088_create_users_table.py  cb354bae0bfe_merge_heads.py  d7b465d37487_add_server_default_to_users_is_active.py  df814258c022_add_role_column_to_users.py  e5e33863a297_initial_schema.py
tests/: conftest.py
tests/integration/: test_admin_endpoints.py  test_auth_flow.py  test_graduated_enforcement.py  test_redis_integration.py
tests/load/: locustfile.py
tests/load/scenarios/: credential_stuffer.py  legitimate_user.py  scraper.py
tests/unit/: test_abuse_detector.py  test_bloom_filter.py  test_bloom_sync.py  test_config.py  test_dependencies.py  test_exceptions.py  test_graduated_response.py  test_models.py  test_rate_limiter.py  test_redis_client.py  test_security.py  test_shadow_logger.py
