[project]
name = "agad"
version = "0.1.0"
description = ""
authors = [
    {name = "macaulaypraise",email = "Macaulaypraise37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "redis[hiredis] (>=7.4.0,<8.0.0)",
    "pybloom-live (>=4.0.0,<5.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "structlog (>=25.0.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "locust (>=2.43.3,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
# Target your specific pinned version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E), isort (I), and pyupgrade (UP)
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
# FastAPI relies heavily on Pydantic and strict type hints.
# This enforces industry-standard type safety.
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "pybloom_live.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.services.bloom_filter",
    "app.core.redis_client"
]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "app.config"
]
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
# Define where your tests will live
testpaths = ["tests"]

# Automatically detect and run async tests
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

# Default command line options when you run `pytest`
# -v: verbose output
# --cov: generate a coverage report for your main code folder (assuming it's named 'app')
# --cov-report: show exactly which lines of code are missing tests in the terminal
addopts = "-v --cov=app --cov-report=term-missing"
